--- a/requirements.txt
+++ b/requirements.txt
@@ -10,9 +10,12 @@ Mako==1.3.10
 MarkupSafe==3.0.3
 pydantic==2.11.9
 pydantic_core==2.33.2
+python-slugify==8.0.4
 sniffio==1.3.1
-alembic init app/migrationsalembic init app/migrationsSQLAlchemy==2.0.43
+SQLAlchemy==2.0.43
 starlette==0.48.0
+text-unidecode==1.3
 typing-inspection==0.4.1
 typing_extensions==4.15.0
+unicode==2.9
 uvicorn==0.37.0
