--- a/alembic.ini
+++ b/alembic.ini
@@ -86,8 +86,7 @@ path_separator = os
 # file.
 
 #sqlalchemy.url = driver://user:pass@localhost/dbname
-sqlalchemy.url = sqlite:///ecommerce.db
-
+sqlalchemy.url = postgresql+asyncpg://ecommerce:eco@localhost:5432/ecommerce
 
 [post_write_hooks]
 # post_write_hooks defines scripts or Python functions that are run
