--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ alembic==1.16.5
 annotated-types==0.7.0
 anyio==4.11.0
 asyncpg==0.30.0
+bcrypt==4.0.1
 click==8.3.0
 fastapi==0.117.1
 greenlet==3.2.4
@@ -9,6 +10,7 @@ h11==0.16.0
 idna==3.10
 Mako==1.3.10
 MarkupSafe==3.0.3
+passlib==1.7.4
 pydantic==2.11.9
 pydantic_core==2.33.2
 python-slugify==8.0.4
