--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ MarkupSafe==3.0.3
 passlib==1.7.4
 pydantic==2.11.9
 pydantic_core==2.33.2
+PyJWT==2.10.1
 python-multipart==0.0.20
 python-slugify==8.0.4
 sniffio==1.3.1
